tests/bad/BadBracers.php
<?php

/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */

/**
 * Description of BadBracers.
 */
class BadBracers 
{
    //put your code here=
}